# leraine-studio

./: CMakeLists.txt  HANDOFF.md  SUBMODULE_INVENTORY.md  verify_redo
build_output/: CMakeCache.txt
libraries/imgui-sfml/build_output/: CMakeCache.txt
source/editing/: bpm-edit-mode.cpp  bpm-edit-mode.h  select-edit-mode.cpp  select-edit-mode.h
source/editing/base/: edit-mode.cpp  edit-mode.h
source/modules/: audio-module.cpp  audio-module.h  beat-module.cpp  beat-module.h  chart-parser-module.cpp  chart-parser-module.h  edit-module.cpp  edit-module.h  timefield-render-module.cpp  timefield-render-module.h
source/program/: program.cpp  program.h
source/structures/: chart.cpp  chart.h  skin.cpp  skin.h  timefield-render-graph.cpp  timefield-render-graph.h
source/utilities/imgui/addons/imguidock/: imguidock.cpp
tests/: test_main.cpp  verify_redo.cpp
